Display is now readonly, increased font size

--- a/src/gui/parniscitacka.ui
+++ b/src/gui/parniscitacka.ui
@@ -405,7 +405,7 @@ QPushButton:pressed {
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>36</pointsize>
        </font>
       </property>
       <property name="styleSheet">
@@ -416,10 +416,13 @@ QPushButton:pressed {
 }</string>
       </property>
       <property name="text">
-       <string>0.0</string>
+       <string>0</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
