--- a/src/gui/parniscitacka.ui
+++ b/src/gui/parniscitacka.ui
@@ -39,6 +39,13 @@
    <string notr="true">QWidget{
 	
 	background-color: rgb(0, 67, 82);
+}
+
+QMessageBox QLabel {
+	
+	color: rgb(255, 255, 255);
+	
+	background-color: none;
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -56,6 +63,13 @@
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -83,7 +97,7 @@ QPushButton:pressed {
 }</string>
       </property>
       <property name="text">
-       <string>Q_root</string>
+       <string>root</string>
       </property>
      </widget>
     </item>
@@ -100,6 +114,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -153,7 +174,7 @@ QPushButton:pressed {
       </property>
       <property name="font">
        <font>
-        <pointsize>36</pointsize>
+        <pointsize>20</pointsize>
        </font>
       </property>
       <property name="styleSheet">
@@ -187,6 +208,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -232,6 +260,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -275,6 +310,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -320,6 +362,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -363,6 +412,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -408,6 +464,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -451,6 +514,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -496,6 +566,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -534,6 +611,13 @@ QPushButton:pressed {
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -571,6 +655,13 @@ QPushButton:pressed {
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -616,6 +707,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -659,6 +757,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -704,6 +809,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -747,6 +859,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -792,6 +911,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -836,6 +962,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -873,6 +1006,13 @@ QPushButton:pressed {
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -918,6 +1058,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -958,7 +1105,9 @@ QPushButton:pressed {
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -987,7 +1136,7 @@ QPushButton:pressed {
 }</string>
       </property>
       <property name="text">
-       <string>&lt;-</string>
+       <string>⇐</string>
       </property>
      </widget>
     </item>
@@ -998,6 +1147,13 @@ QPushButton:pressed {
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -1043,6 +1199,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -1087,6 +1250,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -1124,6 +1294,13 @@ QPushButton:pressed {
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -1169,6 +1346,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -1212,6 +1396,13 @@ QPushButton:pressed {
         <width>40</width>
         <height>40</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -1257,6 +1448,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>16</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -1301,6 +1499,13 @@ QPushButton:pressed {
         <height>40</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
 	color: rgb(255, 255, 255);
@@ -1338,6 +1543,13 @@ QPushButton:pressed {
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roboto Black</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton {
@@ -1433,27 +1645,27 @@ QPushButton:pressed {
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>255</green>
-          <blue>255</blue>
+          <red>0</red>
+          <green>67</green>
+          <blue>82</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>255</green>
-          <blue>255</blue>
+          <red>0</red>
+          <green>67</green>
+          <blue>82</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>255</green>
-          <blue>255</blue>
+          <red>0</red>
+          <green>67</green>
+          <blue>82</blue>
          </color>
         </brush>
        </colorrole>
